[workspace]
resolver = "2"
members = [
    "client",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "LicenseRef-dYdX-Custom"

[workspace.dependencies]
anyhow = {version = "1", default-features = false}
async-trait = {version = "0.1", default-features = false}
bigdecimal = { version = "0.4", default-features = false, features = ["std", "serde"] }
derive_more = { version = "2", default-features = false, features = ["full"] }
log = {version = "0.4", default-features = false}
thiserror = {version = "2", default-features = false}
tokio = { version = "1", default-features = false, features = ["fs", "rt-multi-thread"] }
dydx-proto = {version = "0.4", default-features = false}
