[package]
name = "dydx"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description = "dYdX v4 asynchronous client."
repository = "https://github.com/dydxprotocol/v4-clients/tree/main/v4-client-rs"

# https://crates.io/categories
categories = ["api-bindings", "asynchronous", "finance"]
keywords = ["trading", "dex"]

[features]
default = ["faucet", "noble", "telemetry"]
faucet = []
noble = [
    "dep:ibc-proto"
]
telemetry = [
    "dep:metrics",
]
# Enables strict Serde deserialization by denying unknown fields in API response types.
strict-serde = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64 = {version = "0.22", default-features = false}
bigdecimal.workspace = true
bip32 = { version = "0.5", default-features = false, features = ["bip39", "alloc", "secp256k1"] }
cosmrs = {version = "0.22", default-features = false, features = ["bip32"]}
chrono = { version = "0.4", default-features = false, features = ["now", "serde"] }
delegate = {version = "0.13", default-features = false}
derive_more.workspace = true
futures-util = {version = "0.3", default-features = false}
governor = { version = "0.10", default-features = false, features = ["std"] }
ibc-proto = { version = "0.52", default-features = false, optional = true }
log.workspace = true
rand = {version = "0.10", default-features = false, features=["thread_rng"]}
reqwest = { version = "0.13", default-features = false, features = ["json", "query"] }
rustls = { version = "0.23", default-features = false, features=["ring"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = {version = "1", default-features = false, features=["alloc"]}
serde_with = {version = "3", default-features = false, features=["macros"]}
strum = { version = "0.27", default-features = false, features = ["derive"] }
thiserror.workspace = true
tonic = { version = "0.13", default-features = false, features = ["tls-native-roots"] }
tokio.workspace = true
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "handshake","stream"] }
toml = {version = "1", default-features = false, features = ["parse", "serde"] }
tower = { version = "0.5", default-features = false, features = ["timeout"] }
dydx-proto.workspace = true

# Telemetry
metrics = { version = "0.24", default-features = false, optional = true }

[dev-dependencies]
metrics-exporter-tcp = {version = "0.11", default-features = false}
serial_test = {version = "3", default-features = false}
tracing = {version = "0.1", default-features = false}
tracing-subscriber = {version = "0.3", default-features = false, features = ["std", "fmt"]}
